monitoring-single/alertmanager/manifests/alertmanager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  alertmanager
  labels:
    app.kubernetes.io/name: alertmanager
  namespace: monitoring
  annotations:
    configmap.reloader.stakater.com/reload: alertmanager-templates,alertmanager-config
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: alertmanager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alertmanager
    spec:
      containers:
      - name:  alertmanager
        image:  prom/alertmanager:v0.27.0
        args:
        - "--config.file=/etc/alertmanager/config.yaml"
        - "--storage.path=/alertmanager"
        resources: {}
        livenessProbe:
          httpGet:
            path: /metrics
            port: 9093
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /metrics
            port: 9093
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - name: alertmanager
          containerPort:  9093
        volumeMounts:
        - name: storage
          mountPath: /alertmanager
        - name: alertmanager-config-volume
          mountPath: /etc/alertmanager
        - name: alertmanager-template-volume
          mountPath: /etc/alertmanager-template
      volumes:
      - name: storage
        emptyDir: {}
      - name: alertmanager-config-volume
        configMap:
          name: alertmanager-config
      - name: alertmanager-template-volume
        configMap:
          name: alertmanager-templates

---
kind: Service
apiVersion: v1
metadata:
  name:  alertmanager
  namespace: monitoring
  annotations: 
    prometheus.io/scrape: "true"
    prometheus.io/port: "9093"
spec:
  selector:
    app.kubernetes.io/name: alertmanager
  type:  ClusterIP
  ports:
  - name:  alertmanager
    port:  9093


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  tls:
  - hosts:
      - alert.dev.local
    secretName: alertmanager-tls
  rules:
  - host: alert.dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alertmanager
            port:
              number: 9093
